# road_controller

./: .gitignore  CMakeLists.txt  LICENSE
Diagram/drawio/: controller  controller.xml
devops/: install-opencv.sh
src/: main.cc
src/subsystem/perception/detection/: basic_lane_detector.cc  basic_lane_detector.h  lane_detector_strategy.h
